var searchData=
[
  ['ciphertext_5fballot_5fproto_5f_5ffree_5funpacked_0',['ciphertext_ballot_proto__free_unpacked',['../ballot_8pb-c_8c.html#acbf7c6f93a8985b00f9d489ea4692c8c',1,'ciphertext_ballot_proto__free_unpacked(CiphertextBallotProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#acbf7c6f93a8985b00f9d489ea4692c8c',1,'ciphertext_ballot_proto__free_unpacked(CiphertextBallotProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c']]],
  ['ciphertext_5fballot_5fproto_5f_5fget_5fpacked_5fsize_1',['ciphertext_ballot_proto__get_packed_size',['../ballot_8pb-c_8c.html#a69f21ea5dbdbdb6262f8dbe72b73ae33',1,'ciphertext_ballot_proto__get_packed_size(const CiphertextBallotProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a69f21ea5dbdbdb6262f8dbe72b73ae33',1,'ciphertext_ballot_proto__get_packed_size(const CiphertextBallotProto *message):&#160;ballot.pb-c.c']]],
  ['ciphertext_5fballot_5fproto_5f_5finit_2',['ciphertext_ballot_proto__init',['../ballot_8pb-c_8c.html#acf63f97e1a03f07fc0ebc989408a86dc',1,'ciphertext_ballot_proto__init(CiphertextBallotProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#acf63f97e1a03f07fc0ebc989408a86dc',1,'ciphertext_ballot_proto__init(CiphertextBallotProto *message):&#160;ballot.pb-c.c']]],
  ['ciphertext_5fballot_5fproto_5f_5fpack_3',['ciphertext_ballot_proto__pack',['../ballot_8pb-c_8c.html#a87fb03733fa45092123193bf5c9ea334',1,'ciphertext_ballot_proto__pack(const CiphertextBallotProto *message, uint8_t *out):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a87fb03733fa45092123193bf5c9ea334',1,'ciphertext_ballot_proto__pack(const CiphertextBallotProto *message, uint8_t *out):&#160;ballot.pb-c.c']]],
  ['ciphertext_5fballot_5fproto_5f_5fpack_5fto_5fbuffer_4',['ciphertext_ballot_proto__pack_to_buffer',['../ballot_8pb-c_8c.html#a64cf7c0a58ff43b6b943131a4e32547f',1,'ciphertext_ballot_proto__pack_to_buffer(const CiphertextBallotProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a64cf7c0a58ff43b6b943131a4e32547f',1,'ciphertext_ballot_proto__pack_to_buffer(const CiphertextBallotProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c']]],
  ['ciphertext_5fballot_5fproto_5f_5funpack_5',['ciphertext_ballot_proto__unpack',['../ballot_8pb-c_8c.html#a2b8c0a1b5a9df4feecb8a6f36ffdd6bd',1,'ciphertext_ballot_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a2b8c0a1b5a9df4feecb8a6f36ffdd6bd',1,'ciphertext_ballot_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c']]],
  ['ciphertext_5fdecryption_5fcontest_5fproto_5f_5ffree_5funpacked_6',['ciphertext_decryption_contest_proto__free_unpacked',['../tally_8pb-c_8h.html#a7f8afa7ca0363f446f1be9dcf2d8528a',1,'ciphertext_decryption_contest_proto__free_unpacked(CiphertextDecryptionContestProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a7f8afa7ca0363f446f1be9dcf2d8528a',1,'ciphertext_decryption_contest_proto__free_unpacked(CiphertextDecryptionContestProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fcontest_5fproto_5f_5fget_5fpacked_5fsize_7',['ciphertext_decryption_contest_proto__get_packed_size',['../tally_8pb-c_8h.html#a2301f9f7c9813438f97e01c999250fa7',1,'ciphertext_decryption_contest_proto__get_packed_size(const CiphertextDecryptionContestProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a2301f9f7c9813438f97e01c999250fa7',1,'ciphertext_decryption_contest_proto__get_packed_size(const CiphertextDecryptionContestProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fcontest_5fproto_5f_5finit_8',['ciphertext_decryption_contest_proto__init',['../tally_8pb-c_8h.html#aa4c3f52b621a026f0b821bbbb8ffb098',1,'ciphertext_decryption_contest_proto__init(CiphertextDecryptionContestProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#aa4c3f52b621a026f0b821bbbb8ffb098',1,'ciphertext_decryption_contest_proto__init(CiphertextDecryptionContestProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fcontest_5fproto_5f_5fpack_9',['ciphertext_decryption_contest_proto__pack',['../tally_8pb-c_8h.html#a860bad2f222e50799b5503aeb8438f17',1,'ciphertext_decryption_contest_proto__pack(const CiphertextDecryptionContestProto *message, uint8_t *out):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a860bad2f222e50799b5503aeb8438f17',1,'ciphertext_decryption_contest_proto__pack(const CiphertextDecryptionContestProto *message, uint8_t *out):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fcontest_5fproto_5f_5fpack_5fto_5fbuffer_10',['ciphertext_decryption_contest_proto__pack_to_buffer',['../tally_8pb-c_8h.html#a5d35f5bec2864b4da7ca35eaa78e53ec',1,'ciphertext_decryption_contest_proto__pack_to_buffer(const CiphertextDecryptionContestProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a5d35f5bec2864b4da7ca35eaa78e53ec',1,'ciphertext_decryption_contest_proto__pack_to_buffer(const CiphertextDecryptionContestProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fcontest_5fproto_5f_5funpack_11',['ciphertext_decryption_contest_proto__unpack',['../tally_8pb-c_8h.html#a9bb02d933725b05049c55dfbe9ef1337',1,'ciphertext_decryption_contest_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a9bb02d933725b05049c55dfbe9ef1337',1,'ciphertext_decryption_contest_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fselection_5fproto_5f_5ffree_5funpacked_12',['ciphertext_decryption_selection_proto__free_unpacked',['../tally_8pb-c_8h.html#af2f4a3655118029f6d1d5a840581c2b8',1,'ciphertext_decryption_selection_proto__free_unpacked(CiphertextDecryptionSelectionProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#af2f4a3655118029f6d1d5a840581c2b8',1,'ciphertext_decryption_selection_proto__free_unpacked(CiphertextDecryptionSelectionProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fselection_5fproto_5f_5fget_5fpacked_5fsize_13',['ciphertext_decryption_selection_proto__get_packed_size',['../tally_8pb-c_8h.html#accc8b149742b02b0855e65af105068d3',1,'ciphertext_decryption_selection_proto__get_packed_size(const CiphertextDecryptionSelectionProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#accc8b149742b02b0855e65af105068d3',1,'ciphertext_decryption_selection_proto__get_packed_size(const CiphertextDecryptionSelectionProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fselection_5fproto_5f_5finit_14',['ciphertext_decryption_selection_proto__init',['../tally_8pb-c_8h.html#a52009b2157293265d47d0b81cba9467d',1,'ciphertext_decryption_selection_proto__init(CiphertextDecryptionSelectionProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a52009b2157293265d47d0b81cba9467d',1,'ciphertext_decryption_selection_proto__init(CiphertextDecryptionSelectionProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fselection_5fproto_5f_5fpack_15',['ciphertext_decryption_selection_proto__pack',['../tally_8pb-c_8h.html#a9371a69c65391d112f39dae2466aad20',1,'ciphertext_decryption_selection_proto__pack(const CiphertextDecryptionSelectionProto *message, uint8_t *out):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a9371a69c65391d112f39dae2466aad20',1,'ciphertext_decryption_selection_proto__pack(const CiphertextDecryptionSelectionProto *message, uint8_t *out):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fselection_5fproto_5f_5fpack_5fto_5fbuffer_16',['ciphertext_decryption_selection_proto__pack_to_buffer',['../tally_8pb-c_8h.html#ac2cf49750a54292e95fa51c5d69a398d',1,'ciphertext_decryption_selection_proto__pack_to_buffer(const CiphertextDecryptionSelectionProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#ac2cf49750a54292e95fa51c5d69a398d',1,'ciphertext_decryption_selection_proto__pack_to_buffer(const CiphertextDecryptionSelectionProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fselection_5fproto_5f_5funpack_17',['ciphertext_decryption_selection_proto__unpack',['../tally_8pb-c_8h.html#a9a997293577b75d851f58fbe83276dc1',1,'ciphertext_decryption_selection_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a9a997293577b75d851f58fbe83276dc1',1,'ciphertext_decryption_selection_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fcontest_5fproto_5f_5ffree_5funpacked_18',['ciphertext_tally_contest_proto__free_unpacked',['../tally_8pb-c_8h.html#ac8d0e9b69cd3d9147193fc6d31c9857d',1,'ciphertext_tally_contest_proto__free_unpacked(CiphertextTallyContestProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#ac8d0e9b69cd3d9147193fc6d31c9857d',1,'ciphertext_tally_contest_proto__free_unpacked(CiphertextTallyContestProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fcontest_5fproto_5f_5fget_5fpacked_5fsize_19',['ciphertext_tally_contest_proto__get_packed_size',['../tally_8pb-c_8h.html#a5143e16b534715b61c38cb88532f6ee8',1,'ciphertext_tally_contest_proto__get_packed_size(const CiphertextTallyContestProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a5143e16b534715b61c38cb88532f6ee8',1,'ciphertext_tally_contest_proto__get_packed_size(const CiphertextTallyContestProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fcontest_5fproto_5f_5finit_20',['ciphertext_tally_contest_proto__init',['../tally_8pb-c_8h.html#a0a1c8478b8d2e51a21fdee4122e75798',1,'ciphertext_tally_contest_proto__init(CiphertextTallyContestProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a0a1c8478b8d2e51a21fdee4122e75798',1,'ciphertext_tally_contest_proto__init(CiphertextTallyContestProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fcontest_5fproto_5f_5fpack_21',['ciphertext_tally_contest_proto__pack',['../tally_8pb-c_8h.html#a6ef518fc8949be8eb512cca1a14094e9',1,'ciphertext_tally_contest_proto__pack(const CiphertextTallyContestProto *message, uint8_t *out):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a6ef518fc8949be8eb512cca1a14094e9',1,'ciphertext_tally_contest_proto__pack(const CiphertextTallyContestProto *message, uint8_t *out):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fcontest_5fproto_5f_5fpack_5fto_5fbuffer_22',['ciphertext_tally_contest_proto__pack_to_buffer',['../tally_8pb-c_8h.html#aa054c57438e8c86c28fd1bc38ae601a7',1,'ciphertext_tally_contest_proto__pack_to_buffer(const CiphertextTallyContestProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#aa054c57438e8c86c28fd1bc38ae601a7',1,'ciphertext_tally_contest_proto__pack_to_buffer(const CiphertextTallyContestProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fcontest_5fproto_5f_5funpack_23',['ciphertext_tally_contest_proto__unpack',['../tally_8pb-c_8h.html#a23d7b9d184b14dfbba693c53f22d439d',1,'ciphertext_tally_contest_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a23d7b9d184b14dfbba693c53f22d439d',1,'ciphertext_tally_contest_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fproto_5f_5ffree_5funpacked_24',['ciphertext_tally_proto__free_unpacked',['../tally_8pb-c_8h.html#a9d3141e741bd311160e42f85df723574',1,'ciphertext_tally_proto__free_unpacked(CiphertextTallyProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a9d3141e741bd311160e42f85df723574',1,'ciphertext_tally_proto__free_unpacked(CiphertextTallyProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fproto_5f_5fget_5fpacked_5fsize_25',['ciphertext_tally_proto__get_packed_size',['../tally_8pb-c_8h.html#a8826e1310dd0f1038995abafbedd1446',1,'ciphertext_tally_proto__get_packed_size(const CiphertextTallyProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a8826e1310dd0f1038995abafbedd1446',1,'ciphertext_tally_proto__get_packed_size(const CiphertextTallyProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fproto_5f_5finit_26',['ciphertext_tally_proto__init',['../tally_8pb-c_8h.html#a8b306d0fe02b601a80aa400c3e3c004d',1,'ciphertext_tally_proto__init(CiphertextTallyProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a8b306d0fe02b601a80aa400c3e3c004d',1,'ciphertext_tally_proto__init(CiphertextTallyProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fproto_5f_5fpack_27',['ciphertext_tally_proto__pack',['../tally_8pb-c_8h.html#afcc390ad64bdde5219ed6999bda8d349',1,'ciphertext_tally_proto__pack(const CiphertextTallyProto *message, uint8_t *out):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#afcc390ad64bdde5219ed6999bda8d349',1,'ciphertext_tally_proto__pack(const CiphertextTallyProto *message, uint8_t *out):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fproto_5f_5fpack_5fto_5fbuffer_28',['ciphertext_tally_proto__pack_to_buffer',['../tally_8pb-c_8h.html#a571d09c6c4c62b76f2a11860135caad4',1,'ciphertext_tally_proto__pack_to_buffer(const CiphertextTallyProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a571d09c6c4c62b76f2a11860135caad4',1,'ciphertext_tally_proto__pack_to_buffer(const CiphertextTallyProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fproto_5f_5funpack_29',['ciphertext_tally_proto__unpack',['../tally_8pb-c_8h.html#a2260838bb556ac9e31690eeb49ffb919',1,'ciphertext_tally_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a2260838bb556ac9e31690eeb49ffb919',1,'ciphertext_tally_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fselection_5fproto_5f_5ffree_5funpacked_30',['ciphertext_tally_selection_proto__free_unpacked',['../tally_8pb-c_8h.html#add235daddae9ca7bb6f686fc644f296c',1,'ciphertext_tally_selection_proto__free_unpacked(CiphertextTallySelectionProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#add235daddae9ca7bb6f686fc644f296c',1,'ciphertext_tally_selection_proto__free_unpacked(CiphertextTallySelectionProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fselection_5fproto_5f_5fget_5fpacked_5fsize_31',['ciphertext_tally_selection_proto__get_packed_size',['../tally_8pb-c_8h.html#a529837fe7a9d0a2c2e477fffc41ba69b',1,'ciphertext_tally_selection_proto__get_packed_size(const CiphertextTallySelectionProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a529837fe7a9d0a2c2e477fffc41ba69b',1,'ciphertext_tally_selection_proto__get_packed_size(const CiphertextTallySelectionProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fselection_5fproto_5f_5finit_32',['ciphertext_tally_selection_proto__init',['../tally_8pb-c_8h.html#ae5207f98f0396f44c43ecf5350e94eb0',1,'ciphertext_tally_selection_proto__init(CiphertextTallySelectionProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#ae5207f98f0396f44c43ecf5350e94eb0',1,'ciphertext_tally_selection_proto__init(CiphertextTallySelectionProto *message):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fselection_5fproto_5f_5fpack_33',['ciphertext_tally_selection_proto__pack',['../tally_8pb-c_8h.html#ab860008da9f6f0a56cd848ab70952061',1,'ciphertext_tally_selection_proto__pack(const CiphertextTallySelectionProto *message, uint8_t *out):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#ab860008da9f6f0a56cd848ab70952061',1,'ciphertext_tally_selection_proto__pack(const CiphertextTallySelectionProto *message, uint8_t *out):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fselection_5fproto_5f_5fpack_5fto_5fbuffer_34',['ciphertext_tally_selection_proto__pack_to_buffer',['../tally_8pb-c_8h.html#af9f55d470b6b87883a8c5ba2faa9ee31',1,'ciphertext_tally_selection_proto__pack_to_buffer(const CiphertextTallySelectionProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#af9f55d470b6b87883a8c5ba2faa9ee31',1,'ciphertext_tally_selection_proto__pack_to_buffer(const CiphertextTallySelectionProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fselection_5fproto_5f_5funpack_35',['ciphertext_tally_selection_proto__unpack',['../tally_8pb-c_8h.html#a672e510fb8c67740b5c4e62a2423e326',1,'ciphertext_tally_selection_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a672e510fb8c67740b5c4e62a2423e326',1,'ciphertext_tally_selection_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c']]],
  ['coefficient_5fproto_5f_5ffree_5funpacked_36',['coefficient_proto__free_unpacked',['../buff_8pb-c_8c.html#ab89aa5c6553e6f26b59551261ef6d551',1,'coefficient_proto__free_unpacked(CoefficientProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ab89aa5c6553e6f26b59551261ef6d551',1,'coefficient_proto__free_unpacked(CoefficientProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['coefficient_5fproto_5f_5fget_5fpacked_5fsize_37',['coefficient_proto__get_packed_size',['../buff_8pb-c_8c.html#a25c2525a802ed713d8b4b6a7d889319a',1,'coefficient_proto__get_packed_size(const CoefficientProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a25c2525a802ed713d8b4b6a7d889319a',1,'coefficient_proto__get_packed_size(const CoefficientProto *message):&#160;buff.pb-c.c']]],
  ['coefficient_5fproto_5f_5finit_38',['coefficient_proto__init',['../buff_8pb-c_8c.html#ae643b5cb86ecdf98b5bb1b20b876db29',1,'coefficient_proto__init(CoefficientProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ae643b5cb86ecdf98b5bb1b20b876db29',1,'coefficient_proto__init(CoefficientProto *message):&#160;buff.pb-c.c']]],
  ['coefficient_5fproto_5f_5fpack_39',['coefficient_proto__pack',['../buff_8pb-c_8c.html#ae045daf26e4650cdec4699daa81320e8',1,'coefficient_proto__pack(const CoefficientProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ae045daf26e4650cdec4699daa81320e8',1,'coefficient_proto__pack(const CoefficientProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['coefficient_5fproto_5f_5fpack_5fto_5fbuffer_40',['coefficient_proto__pack_to_buffer',['../buff_8pb-c_8c.html#a8bfd592f628efca4268f2321e03b857e',1,'coefficient_proto__pack_to_buffer(const CoefficientProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a8bfd592f628efca4268f2321e03b857e',1,'coefficient_proto__pack_to_buffer(const CoefficientProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['coefficient_5fproto_5f_5funpack_41',['coefficient_proto__unpack',['../buff_8pb-c_8c.html#a24b15b30520ac8296cd1afe84071e477',1,'coefficient_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a24b15b30520ac8296cd1afe84071e477',1,'coefficient_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['combine_5felection_5fpublic_5fkeys_42',['combine_election_public_keys',['../model_8h.html#a6a87f16c94c888eda9aaf5fd5ed3baa6',1,'combine_election_public_keys(ElectionKeyPair *guardian, ElectionKeyPair *pubkey_map, size_t count, ElectionJointKey *joint_key):&#160;model.c'],['../model_8c.html#a6a87f16c94c888eda9aaf5fd5ed3baa6',1,'combine_election_public_keys(ElectionKeyPair *guardian, ElectionKeyPair *pubkey_map, size_t count, ElectionJointKey *joint_key):&#160;model.c']]],
  ['compute_5fdecryption_5fshare_43',['compute_decryption_share',['../model_8h.html#a643963db772f4d523c4078e473c49ef3',1,'compute_decryption_share(ElectionKeyPair *guardian, CiphertextTally *ciphertally, DecryptionShare *share):&#160;model.c'],['../model_8c.html#a643963db772f4d523c4078e473c49ef3',1,'compute_decryption_share(ElectionKeyPair *guardian, CiphertextTally *ciphertally, DecryptionShare *share):&#160;model.c']]],
  ['compute_5fdecryption_5fshare_5ffor_5fcontest_44',['compute_decryption_share_for_contest',['../crypto__utils_8c.html#a8fbbd04ef6759e5f2ad5afeea05b92af',1,'compute_decryption_share_for_contest(ElectionKeyPair *guardian, CiphertextTallyContest *contest, sp_int *base_hash, CiphertextDecryptionContest *dec_contest):&#160;crypto_utils.c'],['../crypto__utils_8h.html#a8fbbd04ef6759e5f2ad5afeea05b92af',1,'compute_decryption_share_for_contest(ElectionKeyPair *guardian, CiphertextTallyContest *contest, sp_int *base_hash, CiphertextDecryptionContest *dec_contest):&#160;crypto_utils.c']]],
  ['compute_5fpolynomial_5fcoordinate_45',['compute_polynomial_coordinate',['../crypto__utils_8c.html#a1aaac21ca15f371368fcb20d028fc130',1,'compute_polynomial_coordinate(uint8_t *exponent_modifier, ElectionPolynomial *polynomial, sp_int *coordinate):&#160;crypto_utils.c'],['../crypto__utils_8h.html#a1aaac21ca15f371368fcb20d028fc130',1,'compute_polynomial_coordinate(uint8_t *exponent_modifier, ElectionPolynomial *polynomial, sp_int *coordinate):&#160;crypto_utils.c']]]
];
